--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -4,7 +4,10 @@
     align-items: center;
 
     padding: 1em 2em;
-    background-color: #2222221f;
+    background-color: #dddddd;
+
+    position: relative;
+    z-index: 1000;
 }
 
 .website-logo {
