--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,6 @@ code {
 
 
 body {
-  overflow-x: hidden;
-  overflow-y: scroll;
+  margin: 0;
+  padding: 0;
 }
